// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Radio Inline 1`] = `
<fieldset
  class="fd-fieldset"
  id="radio4"
>
  
    
  <legend
    class="fd-fieldset__legend"
  >
    Inline Radio buttons
  </legend>
  
        
  <div
    class="fd-form-group fd-form-group--inline"
  >
    
            
    <div
      class="fd-form-group__item fd-form-item"
    >
      
                
      <input
        checked=""
        class="fd-radio"
        id="pDidh767"
        name="radio4"
        type="radio"
      />
      
                
      <label
        class="fd-radio__label"
        for="pDidh767"
      >
        
                    Field label
                
      </label>
      
            
    </div>
    
            
    <div
      class="fd-form-group__item fd-form-item"
    >
      
                
      <input
        class="fd-radio"
        id="pDidh7618"
        name="radio4"
        type="radio"
      />
      
                
      <label
        class="fd-radio__label"
        for="pDidh7618"
      >
        
                    Field label
                
      </label>
      
            
    </div>
    
            
    <div
      class="fd-form-group__item fd-form-item"
    >
      
                
      <input
        class="fd-radio"
        id="pDidh7619"
        name="radio4"
        type="radio"
      />
      
                
      <label
        class="fd-radio__label"
        for="pDidh7619"
      >
        
                    Field label
                
      </label>
      
            
    </div>
    
        
  </div>
  

</fieldset>
`;

exports[`Storyshots Components/Forms/Radio Interaction States 1`] = `
<div
  style="display:flex;justify-content:space-between"
>
  
    
  <fieldset
    class="fd-fieldset"
    id="radio5"
  >
    
        
    <legend
      class="fd-fieldset__legend"
    >
      Interaction States
    </legend>
    
        
    <div
      class="fd-form-group"
    >
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          checked=""
          class="fd-radio"
          id="iSpDidh761"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh761"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-success"
          id="iSpDidh7612"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh7612"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-error"
          id="iSpDidh7613"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh7613"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-warning"
          id="iSpDidh7614"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh7614"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-information"
          id="iSpDidh7615"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh7615"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio"
          disabled=""
          id="iSpDidh7611"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh7611"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-success"
          disabled=""
          id="iSpDidh76121"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76121"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-error"
          disabled=""
          id="iSpDidh76131"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76131"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-warning"
          disabled=""
          id="iSpDidh76141"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76141"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio is-information"
          disabled=""
          id="iSpDidh76151"
          name="radio5"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76151"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
        
    </div>
    
    
  </fieldset>
  
    
  <fieldset
    class="fd-fieldset"
    id="radio6"
  >
    
        
    <legend
      class="fd-fieldset__legend"
    >
      Interaction States Compact Mode
    </legend>
    
        
    <div
      class="fd-form-group"
    >
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          checked=""
          class="fd-radio fd-radio--compact"
          id="iSpDidh7619"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh7619"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-success"
          id="iSpDidh76129"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76129"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-error"
          id="iSpDidh76139"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76139"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-warning"
          id="iSpDidh76149"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76149"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-information"
          id="iSpDidh76159"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76159"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact"
          disabled=""
          id="iSpDidh76193"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh76193"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-success"
          disabled=""
          id="iSpDidh761293"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh761293"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-error"
          disabled=""
          id="iSpDidh761393"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh761393"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-warning"
          disabled=""
          id="iSpDidh761493"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh761493"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact is-information"
          disabled=""
          id="iSpDidh761593"
          name="radio6"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="iSpDidh761593"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
        
    </div>
    
    
  </fieldset>
  

</div>
`;

exports[`Storyshots Components/Forms/Radio Responsiveness 1`] = `
<div
  style="display:flex;justify-content:space-between"
>
  
    
  <fieldset
    class="fd-fieldset"
    id="radio1"
  >
    
        
    <legend
      class="fd-fieldset__legend"
    >
      Radio Buttons Cozy Mode
    </legend>
    
        
    <div
      class="fd-form__group"
    >
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          checked=""
          class="fd-radio"
          id="pDidh761"
          name="radio1"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="pDidh761"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio"
          id="pDidh7612"
          name="radio1"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="pDidh7612"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio"
          disabled=""
          id="pDidh764"
          name="radio3"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="pDidh764"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
        
    </div>
    
    
  </fieldset>
  
    
  <fieldset
    class="fd-fieldset"
    id="radio2"
  >
    
        
    <legend
      class="fd-fieldset__legend"
    >
      Radio Buttons Compact Mode
    </legend>
    
        
    <div
      class="fd-form-group"
    >
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          checked=""
          class="fd-radio fd-radio--compact"
          id="pDidh76111"
          name="radio2"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="pDidh76111"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact"
          id="pDidh761211"
          name="radio2"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="pDidh761211"
        >
          
                    Field label
                
        </label>
        
            
      </div>
      
            
      <div
        class="fd-form-item"
      >
        
                
        <input
          class="fd-radio fd-radio--compact"
          disabled=""
          id="pDidh76131133"
          name="radio2"
          type="radio"
        />
        
                
        <label
          class="fd-radio__label"
          for="pDidh76131133"
        >
          
                    Field label (disabled)
                
        </label>
        
            
      </div>
      
        
    </div>
    
    
  </fieldset>
  

</div>
`;
